<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompassActivity" >


      <EditText
       android:id="@+id/dipTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerVertical="true"
	   android:layout_below="@+id/strikeTitle"
       android:background="@android:color/transparent"
       android:clickable="false"
       android:cursorVisible="false"
       android:ems="10"
       android:focusable="false"
       android:focusableInTouchMode="false"
       android:text="@string/dipTitle" >
   </EditText>
   <EditText
	    android:id="@+id/strikeTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="72dp"
	    android:background="@android:color/transparent"
	    android:clickable="false"
	    android:cursorVisible="false"
	    android:ems="10"
	    android:focusable="false"
	    android:focusableInTouchMode="false"
	    android:text="@string/strikeTitle" />

      <EditText
          android:id="@+id/allInfo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/dipTitle"
          android:layout_centerVertical="true"
          android:background="@android:color/transparent"
          android:clickable="false"
          android:cursorVisible="false"
          android:ems="10"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:text="@string/allInfo" >

   </EditText>
</RelativeLayout>
