<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompassCorrection" >

    <EditText
        android:id="@+id/declanationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/declanationTitle"
        android:layout_alignBottom="@+id/declanationTitle"
        android:layout_toRightOf="@+id/declanationTitle"
        android:ems="10" />

    <Button
        android:id="@+id/cmpsSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/declanationTitle"
        android:layout_below="@+id/declanationTxt"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/okBtn" />

    <Button
        android:id="@+id/cmpsCnclBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cmpsSaveBtn"
        android:layout_alignBottom="@+id/cmpsSaveBtn"
        android:layout_alignRight="@+id/declanationTitle"
        android:onClick="onClick"
        android:text="@string/cnclBtn" />

    <EditText
        android:id="@+id/declanationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:text="@string/declationTitle" >

        <requestFocus />
    </EditText>

</RelativeLayout>
